# brack

./: Cargo.nix  Cargo.toml
crates/brack-codegen/: Cargo.toml
crates/brack-expander/: Cargo.toml
crates/brack-language-server/: Cargo.toml
crates/brack-language-server/src/notification/: did_open.rs  did_save.rs
crates/brack-language-server/src/request/: semantic_tokens.rs
crates/brack-lower/: Cargo.toml
crates/brack-lower/src/: curly.rs  expr.rs  lib.rs  lower.rs  op_code.rs  stmt.rs
crates/brack-parser/: Cargo.toml
crates/brack-plugin/: Cargo.toml
crates/brack-plugin/src/: plugins.rs
crates/brack-project-manager/: Cargo.toml
crates/brack-project-manager/src/: document.rs  project.rs
crates/brack-release/: Cargo.toml
crates/brack-release/src/: main.rs  release_note.rs  semver.rs
crates/brack-tokenizer/: Cargo.toml
crates/brack-transformer/: Cargo.toml
doc/JA/: CONTRIBUTING.md
src/: compile.rs  lib.rs  main.rs  new_project.rs
